# WhatAnime3

./: .env  .gitignore  README.md  docker-compose.yml  example.env
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/anilist_api/: Cargo.toml
backend/anilist_api/src/: lib.rs  models.rs  query.graphql  testParse.json  testParse2.json
backend/anisong_api/: Cargo.toml
backend/anisong_api/src/: anisong_api.rs  error.rs  lib.rs  models.rs  testParse1.json  testParse2.json  testParse3.json
backend/database_api/: Cargo.toml
backend/database_api/migrations/: 01_db_schema.sql  20250331024736_init.sql  20250331171547_id_length.sql  20250331214734_unique_array.sql  20250401153028_array_unique_fix.sql
backend/database_api/src/: lib.rs  models.rs  regex.rs
backend/migrations/: 20251116201725_bind_requests.sql
backend/spotify_api/: Cargo.toml
backend/spotify_api/src/: lib.rs  models.rs
backend/src/: main.rs
backend/src/what_anime/: mod.rs  models.rs  routes.rs  utility.rs
backend/what_anime_shared/: Cargo.toml
backend/what_anime_shared/src/: error.rs  lib.rs
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: AnimeEntry.tsx  AnimeList.tsx  HeaderContainer.tsx
frontend/app/components/moderator/: Bind.tsx  BindView.tsx  Report.tsx  ReportsView.tsx
frontend/app/contexts/: ContextWrapper.tsx  ReportContext.tsx  SettingsContext.tsx  SongContext.tsx  UserContext.tsx
frontend/app/moderator/: page.tsx
frontend/app/overlays/: OptionsOverlay.tsx  OverlayWrapper.tsx  ReportOverlay.tsx
frontend/app/types/: Anime_types.ts  fetch_types.ts
frontend/app/util/: testItems.ts  utility.tsx
