[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
what_anime_shared = { path = "what_anime_shared" }
anisong_api = { path = "anisong_api" }
database_api = { path = "database_api" }
spotify_api = { path = "spotify_api" }
anilist_api = { path = "anilist_api" }
env_logger = "0.11.7"
futures = "0.3.31"
log = "0.4.26"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "derive",
] }
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "net"] }
axum = { version = "0.8.3", features = ["macros"] }
tower-sessions = "0.14.0"
tower-http = { version = "0.6.2", features = ["cors"] }
kakasi = "0.1.0"
fuzzywuzzy = "0.0.2"
dotenvy = "0.15.7"
chrono = "0.4.40"
itertools = "0.14.0"
