[package]
name = "anisong_api"
version = "0.1.0"
edition = "2024"

[dependencies]
what_anime_shared = { path = "../what_anime_shared" }
reqwest = { version = "0.12.15", features = ["json"] }
futures = "0.3.31"
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["postgres"] }
tokio = { version = "1.44.1", features = ["macros"] }
