[package]
name = "spotify_api"
version = "0.1.0"
edition = "2024"

[dependencies]
what_anime_shared = { path = "../what_anime_shared" }
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.40"
tokio = { version = "1.44.1", features = ["time"] }
base64 = "0.22.1"
rand = "0.9.0"
hex = "0.4.3"
